sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/Inbound_Ingestion_Log__c.object-meta.xml
<CustomObject>
    <description>LEM-14648: Custom Inbound Ingestion Log object for SSMO Integration.</description>
    <label>Inbound Ingestion Log</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Inbound Ingestion Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Ingestion Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>