sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Business_Error_Message__c.field-meta.xml
<CustomField>
 <description>LEM-16003: It is used to store business error message logged during exception.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Business_Error_Message__c</fullName>
    <label>Business Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>