sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <description>LEM-21439 as part of this story created this field to Hold the Business Reference External Id (businessId) from the inbound payload received for RESSMO.
This field is used for retry mechanism in case if there is a failure of same businessId Payload before the NNS payload.</description>
    <label>Business Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>