sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <description>LEM-16003: It is used to store category of error logged during exception.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>