sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15613: It indicates created date time for Inbound Ingestion Log record.</description>
    <label>Created Date Time</label>
    <type>DateTime</type>
</CustomField>