sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14813: It is used to store any errors or exception message during the processing of this Log.</description>
    <label>Error Message</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>