sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <description>LEM-15772: It is used to store the Exception message.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Exception_Message__c</fullName>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>