sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Failed_Record_Id__c.field-meta.xml
<CustomField>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15948: It is used to store the failed recordId.</description>
    <fullName>Failed_Record_Id__c</fullName>
    <label>Failed Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>