sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Failed_Steps__c.field-meta.xml
<CustomField>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15948: It is used to store the failed steps.</description>
    <fullName>Failed_Steps__c</fullName>
    <label>Failed Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>