sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Failure_Step__c.field-meta.xml
<CustomField>
    <fullName>Failure_Step__c</fullName>
    <description>LEM-14648: It is used to capture the step number where the record creation process got failed.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Failure Step</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>