sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>LEM-14648: It is used to capture the event type received from Mulesoft.</description>
    <label>Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>