sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Internal_Payload_For_Retry__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payload_For_Retry__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-19796: It is used to store the amendment wrapper received from ENT.</description>
    <label>Internal Payload For Retry</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>