sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Parent_Log__c.field-meta.xml
<CustomField>
  <description>LEM-16003: It is used to store self lookup and will be populated for every child fallout/onboarding ingestion log.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Parent_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Log</label>
    <referenceTo>Inbound_Ingestion_Log__c</referenceTo>
    <relationshipLabel>Inbound Ingestion Logs</relationshipLabel>
    <relationshipName>Inbound_Ingestion_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>