sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-14648: It is used to capture the JSON payload received by Mulesoft.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>