sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <description>LEM-16003: It is used to store retry count to be set during every retry process.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Retry_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>