sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Sanitized_Payload__c.field-meta.xml
<CustomField>
    <fullName>Sanitized_Payload__c</fullName>
    <label>Sanitized Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>