sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>LEM-14648: It is used to capture the source of the integration whether it is an SSMO or SSOB.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
            <value>
                <fullName>RESSMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>