sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/SSMO_Event_Type__c.field-meta.xml
<CustomField>
    <description>LEM-14819: It is used to Store the event type of SSMO fallout.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>SSMO_Event_Type__c</fullName>
    <label>SSMO Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>