sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <description>LEM-16003: It is used to store stack trace logged during exception.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>