sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <description>LEM-14648: It is used to capture whether the record creation process was successful or failure for the current record.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>