sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Store_Account__c.field-meta.xml
<CustomField>
    <fullName>Store_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-21440 to tag store account for RESSMO</description>
    <label>Store Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inbound Ingestion Logs</relationshipLabel>
    <relationshipName>Inbound_Ingestion_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>