sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Success_Message__c.field-meta.xml
<CustomField>
    <description>LEM-15772: It is used to store the Success message.</description>
    <complianceGroup>GDPR</complianceGroup>
    <fullName>Success_Message__c</fullName>
    <label>Success Message</label>
    <type>TextArea</type>
</CustomField>