sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>LEM-17453: It is used to capture the unique Id received by Mulesoft in each payload.</description>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>