sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>LEM-14648: It is used to capture the UUID received by Mulesoft in the payload.</description>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>