sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Log__c/listViews/SSMO_Holding_Queue_Inbound_Ingestion_Log.listView-meta.xml
<ListView>
    <fullName>SSMO_Holding_Queue_Inbound_Ingestion_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>SSMO Holding Queue</label>
    <queue>SSMO_Holding_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>